[package]
name = "blackjack_sim"
version = "0.1.0"
edition = "2021"
author = "Benjamin Haase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
blackjack_lib = {path = "../blackjack_lib"}
clap = {version = "4.3.10", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
serde = {version = "1.0.177", features =  ["derive"] }
serde_json = "1.0.104"
syn = "^2.0.25"
